# fihajo

./: .gitignore  Archive.txt  Dockerfile  Jenkinsfile  LICENSE  README.md  bandit.yaml  confusion_matrix_20240507-015105.json  main.py  pyproject.toml  requirements.txt  tensorflow-uwiz.ipynb
.github/workflows/: pylint.yml  python-test.yml
Docker/: Dockerfile
Stochastic_Sequential_Mnist/: Archive.txt  Load_Mnist_CSV.py  Stochastic_Sequential_Mnist.ipynb  Stochastic_Sequential_Mnist.py  Stochastic_Sequential_Mnist_Load.ipynb  Stochastic_Sequential_Mnist_Save.ipynb  Stochastic_Sequential_Mnist_from_load.ipynb  model_weights.index
Stochastic_Sequential_Mnist/model_settings/: keras_metadata.pb  saved_model.pb
docs/: commands.md  jenkins_path_tutorial.md  jenkins_script.md  questions.md
models/: adv_training.py  evaluation.py  model_utils.py  training.py  uncertainty_analysis.py  visualization.py
notebooks/: adv_train.ipynb  cifar10_test.ipynb  tensorflow-uwiz.ipynb
notebooks/report/: plotly_test.ipynb
report/: HtmlData.py  HtmlGenerator.py  ImageData.py  html_data.py  html_generator.py  html_plot.py  image_data.py  style.css
report/API/: ReportGenApi.py  (+2 more)
report_interactive/: build_list.json  html_structure.py  main.css  main.js  test2_render_html_for_eChart.py
src/: evaluation.py  main.py  model_utils.py  training.py  visualization.py
tests/: Test.py  test2_render_html_for_eChart.py  test_analyze.py  test_dataset_handler.py  test_eval.py  test_html_data.py  test_image_data.py  test_main.py  test_model_builders.py  test_send_report_data.py  test_train.py
(+57 files in other folders)
