[tool.poetry]
name = "fihajo"
version = "0.1.0"
description = ""
authors = ["stalgo <joakim.polden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
tensorflow-directml-plugin = "^0.4.0.dev230202"
ipykernel = "^6.29.0"
matplotlib = "^3.8.2"
uncertainty-wizard = "^0.4.0"
pandas = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
